--- a/src/Abp.Mono.AuthServer/appsettings.json
+++ b/src/Abp.Mono.AuthServer/appsettings.json
@@ -6,7 +6,7 @@
     "RedirectAllowedUrls": "http://localhost:4200,https://localhost:44334,https://localhost:44348,https://localhost:44389"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Mono;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=localhost;Database=Mono;User Id=sa;Password=StrongP@ssWord;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
