--- a/src/Abp.Mono.DbMigrator/appsettings.json
+++ b/src/Abp.Mono.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Mono;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=localhost;Database=Mono;User Id=sa;Password=StrongP@ssWord;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
