--- a/src/Abp.Mono.HttpApi.Host/appsettings.json
+++ b/src/Abp.Mono.HttpApi.Host/appsettings.json
@@ -3,7 +3,7 @@
     "CorsOrigins": "https://*.Mono.com"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Mono;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=localhost;Database=Mono;User Id=sa;Password=StrongP@ssWord;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
