--- a/src/abp.mono.HttpApi.Host/appsettings.json
+++ b/src/abp.mono.HttpApi.Host/appsettings.json
@@ -14,5 +14,16 @@
   },
   "StringEncryption": {
     "DefaultPassPhrase": "DEqUwqKHHKVkwWSG"
+  },
+  "RabbitMQ": {
+    "Connections": {
+      "Default": {
+        "HostName": "localhost"
+      }
+    },
+    "EventBus": {
+      "ClientName": "TestClientName",
+      "ExchangeName": "TestExchangeName"
+    }
   }
 }
