--- a/src/abp.mono.HttpApi.Host/abp.mono.HttpApi.Host.csproj
+++ b/src/abp.mono.HttpApi.Host/abp.mono.HttpApi.Host.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Volo.Abp.AspNetCore.MultiTenancy" Version="8.0.1" />
     <PackageReference Include="Volo.Abp.Autofac" Version="8.0.1" />
     <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="8.0.1" />
+    <PackageReference Include="Volo.Abp.EventBus.RabbitMQ" Version="8.0.1" />
     <PackageReference Include="Volo.Abp.Swashbuckle" Version="8.0.1" />
     <PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="8.0.1" />
   </ItemGroup>
