Add config redis

--- a/src/abp.mono.HttpApi.Host/appsettings.json
+++ b/src/abp.mono.HttpApi.Host/appsettings.json
@@ -15,6 +15,10 @@
   "StringEncryption": {
     "DefaultPassPhrase": "DEqUwqKHHKVkwWSG"
   },
+  "Redis": {
+    "IsEnabled": "true",
+    "Configuration": "127.0.0.1"
+  },
   "RabbitMQ": {
     "Connections": {
       "Default": {
